<resources>
    <string name="app_name">FirebaseExample</string>
    <string name="hint_correo">Correo electrónico</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="bIniciarSesion">Iniciar sesión</string>
    <string name="bCrearCuenta">Crear cuenta</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="cerrarSesion">Cerrar sesión</string>


    <string name="title_activity_login">iniciar sesion</string>

    <string name="facebook_app_id">184292818752469</string>
    <string name="fb_login_protocol_scheme">fb184292818752469</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Telefono</string>
    <string name="edad">Edad</string>
    <string name="title_activity_parqueaderos">ParqueaderosActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>


</resources>
