<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.example.otra.firebase.LoginActivity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eCorreo"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_correo"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eContrasena"
        android:inputType="textPassword"
        android:hint="@string/hint_contrasena"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bIniciarSesion"
        android:text="@string/bIniciarSesion"
        android:onClick="iniciarSesionClicked"
        tools:ignore="OnClick" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bCrearCuenta"
        android:text="@string/bCrearCuenta"
        android:onClick="crearCuentaClicked"/>

    <com.google.android.gms.common.SignInButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignInGoogle"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>
