<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:padding="5dp">

    <!--

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/iFoto"/>
     -->

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/iFoto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/brown"
            android:text="@string/nombre"
            android:id="@+id/tNombre"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/brown"
                    android:text="@string/telefono"
                    android:id="@+id/tTelefono"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/brown"
                    android:text="@string/edad"
                    android:id="@+id/tEdad"
                    android:gravity="right"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>